vcluster_versioned_docs/version-0.24.0/_partials/config/controlPlane/backingStore/database/embedded.mdx

<details className="config-field" data-expandable="true">
<summary>

## `embedded` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">object</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#embedded}

Embedded defines that an embedded database (sqlite) should be used as the backend for the virtual cluster

</summary>




<details className="config-field" data-expandable="false" open>
<summary>

### `enabled` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">boolean</span> <span className="config-field-default">false</span> <span className="config-field-enum"></span> {#embedded-enabled}

Enabled defines if the database should be used.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `dataSource` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#embedded-dataSource}

DataSource is the kine dataSource to use for the database. This depends on the database format.
This is optional for the embedded database. Examples:
* mysql: mysql://username:password@tcp(hostname:3306)/k3s
* postgres: postgres://username:password@hostname:5432/k3s

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `keyFile` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#embedded-keyFile}

KeyFile is the key file to use for the database. This is optional.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `certFile` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#embedded-certFile}

CertFile is the cert file to use for the database. This is optional.

</summary>



</details>



<details className="config-field" data-expandable="false" open>
<summary>

### `caFile` <span className="config-field-required" data-required="false">required</span> <span className="config-field-type">string</span> <span className="config-field-default"></span> <span className="config-field-enum"></span> {#embedded-caFile}

CaFile is the ca file to use for the database. This is optional.

</summary>



</details>


</details>
